# segment-foreground-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  modnet.rs  preprocess.rs  u2net.rs
